
Feb 03, 2007 - chris
o all write-functions return an error if they're called but the 
    database is in read-only mode

Feb 02, 2007 - chris
o database cursors are now fully implemented and tested

Jan 24, 2007 - chris
o default behaviour for ham_create changed; already existing files are now
    overwritten
o now uses -Wall on platforms with gcc
o resized the default cache size from 128kb to 256kb

Jan 23, 2007 - chris
o added a new sample db2.c, which copies an existing database to another
    database using a cursor.

Jan 21, 2007 - chris
o the cursor implementation is finished and seems to work; testing is not 
    yet complete. 
o ham_flush now has an (unused) flags-parameter.
o renamed samples/simple.c to samples/db1.c

Jan 20, 2007 - chris
o created one global transaction-pointer in the database object, and 
    removed all transaction parameters for most functions; added tests that 
    only one single transaction object is created.

Dec 23, 2006 - chris ---------------------------------------------------
                      release of hamsterdb-0.3.1

Dec 23, 2006 - chris
o header-files are now installed to $prefix/include/ham
o test is not build if db.h is missing

Dec 19, 2006 - chris ---------------------------------------------------
                      release of hamsterdb-0.3

Dec 15, 2006 - chris
o started the port to MS Windows; so far, there are only two batch
    files to create the library, but no nmake file or Visual Studio 
    project.
o started to move the stuff to automake/autoconf; transition is not
    yet complete

Dec 10, 2006 - chris 
o a new parameter HAM_OPTIMIZE_SIZE creates smaller files by merging 
    freelist entries (comes at a small performance penalty)

Nov 26, 2006 - chris 
o extended keys are now cached (if the cache size is big enough) 

Nov 24, 2006 - chris 
o added HAM_DISABLE_FREELIST_FLUSH - when a freelist page is modified, it 
    is no longer flushed immediately. this is dangerous - in case of a 